--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                         <p>Details about Company 1.</p>
                     </div>
                     <div class="location-discount">
-                        <span class="location">Location 1</span>
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 🗺️
+                            </a>
+                        </span>
                         <span class="discount">Discount 1</span>
                     </div>
                 </div>
@@ -41,7 +45,11 @@
                         <p>Details about Company 2.</p>
                     </div>
                     <div class="location-discount">
-                        <span class="location">Location 2</span>
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+2" target="_blank">
+                                Location 2 🗺️
+                            </a>
+                        </span>
                         <span class="discount">Discount 2</span>
                     </div>
                 </div>
@@ -58,7 +66,11 @@
                         <p>Details about Company 3.</p>
                     </div>
                     <div class="location-discount">
-                        <span class="location">Location 3</span>
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+3" target="_blank">
+                                Location 3 🗺️
+                            </a>
+                        </span>
                         <span class="discount">Discount 3</span>
                     </div>
                 </div>
@@ -75,7 +87,11 @@
                         <p>Details about Company 4.</p>
                     </div>
                     <div class="location-discount">
-                        <span class="location">Location 4</span>
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+4" target="_blank">
+                                Location 4 🗺️
+                            </a>
+                        </span>
                         <span class="discount">Discount 4</span>
                     </div>
                 </div>
@@ -92,7 +108,11 @@
                         <p>Details about Company 5.</p>
                     </div>
                     <div class="location-discount">
-                        <span class="location">Location 5</span>
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+5" target="_blank">
+                                Location 5 🗺️
+                            </a>
+                        </span>
                         <span class="discount">Discount 5</span>
                     </div>
                 </div>
@@ -109,7 +129,11 @@
                         <p>Details about Company 6.</p>
                     </div>
                     <div class="location-discount">
-                        <span class="location">Location 6</span>
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+6" target="_blank">
+                                Location 6 🗺️
+                            </a>
+                        </span>
                         <span class="discount">Discount 6</span>
                     </div>
                 </div>
@@ -126,7 +150,11 @@
                         <p>Details about Company 7.</p>
                     </div>
                     <div class="location-discount">
-                        <span class="location">Location 7</span>
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+7" target="_blank">
+                                Location 7 🗺️
+                            </a>
+                        </span>
                         <span class="discount">Discount 7</span>
                     </div>
                 </div>
@@ -134,17 +162,17 @@
         </div>
     </div>
 
-    <<footer>
-    <p>© 2024 Emsa Dicle. All rights reserved.</p>
-    <div class="github-info">
-        <a href="https://github.com/ardilyce" target="_blank">
-            <img src="github-logo.png" alt="GitHub" class="github-logo">
-            Ardıl Yüce
-        </a>
-    </div>
-</footer>
-
+    <footer>
+        <p>© 2024 Emsa Dicle. All rights reserved.</p>
+        <div class="github-info">
+            <a href="https://github.com/ardilyce" target="_blank">
+                <img src="github-logo.png" alt="GitHub" class="github-logo">
+                Ardıl Yüce
+            </a>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
