--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header-container">
-        <img src="emsa-dicle-logo.png" alt="Emsa Dicle" class="logo">
+        <img src="emsa_dicle.jpeg" alt="Emsa Dicle" class="logo">
         <input type="text" class="search-bar" placeholder="Search for companies...">
     </header>
 
@@ -166,7 +166,7 @@
         <p>© 2024 Emsa Dicle. All rights reserved.</p>
         <div class="github-info">
             <a href="https://github.com/ardilyce" target="_blank">
-                <img src="github-logo.png" alt="GitHub" class="github-logo">
+                <img src="GitHub_image.png" alt="GitHub" class="github-logo">
                 Ardıl Yüce
             </a>
         </div>
