--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <p>© 2024 Emsa Dicle. All rights reserved.</p>
         <div class="github-info">
             <a href="https://github.com/ardilyce" target="_blank">
-                <img src="GitHub_image.png" alt="GitHub" class="github-logo">
+                <img src="github_logo.png" alt="GitHub" class="github-logo">
                 Ardıl Yüce
             </a>
         </div>
