--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 🗺️
+                                Location 1 📍
                             </a>
                         </span>
                         <span class="discount">Discount 1</span>
@@ -47,7 +47,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/search/?api=1&query=Location+2" target="_blank">
-                                Location 2 🗺️
+                                Location 2 📍
                             </a>
                         </span>
                         <span class="discount">Discount 2</span>
@@ -68,7 +68,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/search/?api=1&query=Location+3" target="_blank">
-                                Location 3 🗺️
+                                Location 3 📍
                             </a>
                         </span>
                         <span class="discount">Discount 3</span>
@@ -89,7 +89,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/search/?api=1&query=Location+4" target="_blank">
-                                Location 4 🗺️
+                                Location 4 📍
                             </a>
                         </span>
                         <span class="discount">Discount 4</span>
@@ -110,7 +110,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/search/?api=1&query=Location+5" target="_blank">
-                                Location 5 🗺️
+                                Location 5 📍
                             </a>
                         </span>
                         <span class="discount">Discount 5</span>
@@ -131,7 +131,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/search/?api=1&query=Location+6" target="_blank">
-                                Location 6 🗺️
+                                Location 6 📍
                             </a>
                         </span>
                         <span class="discount">Discount 6</span>
@@ -152,7 +152,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/search/?api=1&query=Location+7" target="_blank">
-                                Location 7 🗺️
+                                Location 7 📍
                             </a>
                         </span>
                         <span class="discount">Discount 7</span>
