--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="company-list">
         <!-- Company 1 -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Ardil Alpha" class="company-image">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Ardıl Alpha</h2>
+                <h2>Company 1</h2>
                 <div class="info-section">
                     <div class="info-box">
                         <h3>Info 1</h3>
@@ -36,9 +36,9 @@
         </div>
         <!-- Company 2 -->
         <div class="company-box">
-            <img src="company2.jpg" alt="Boran Pasha" class="company-image">
+            <img src="company2.jpg" alt="Company 2" class="company-image">
             <div class="company-info">
-                <h2>Boran Pasha</h2>
+                <h2>Company 2</h2>
                 <div class="info-section">
                     <div class="info-box">
                         <h3>Info 2</h3>
@@ -57,9 +57,9 @@
         </div>
         <!-- Company 3 -->
         <div class="company-box">
-            <img src="company3.jpg" alt="Boran Bey" class="company-image">
+            <img src="company3.jpg" alt="Company 3" class="company-image">
             <div class="company-info">
-                <h2>Boran Bey</h2>
+                <h2>Company 3</h2>
                 <div class="info-section">
                     <div class="info-box">
                         <h3>Info 3</h3>
