--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header-container">
-        <img src="emsa_dicle.jpeg" alt="Emsa Dicle" class="logo">
+        <img src="emsa_dicle.jpeg" alt="Emsa Dicle Kart" class="logo">
         <input type="text" class="search-bar" placeholder="Search for companies...">
     </header>
 
