--- a/index.html
+++ b/index.html
@@ -160,6 +160,426 @@
                 </div>
             </div>
         </div>
+        <!-- Company 8 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 8" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 9 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 10 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 11 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 12 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 13 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 14 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 15 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 16 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 17 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 18 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 19 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 20 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 21 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 22 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 23 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 24 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 25 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 26 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Company 27 -->
+        <div class="company-box">
+            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Company 1</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3>Info 1</h3>
+                        <p>Details about Company 1.</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
+                                Location 1 📍
+                            </a>
+                        </span>
+                        <span class="discount">Discount 1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer>
