--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <div class="company-list">
         <!-- Company 1 -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <img src="liberica.jpg" alt="Liberica" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Liberica Coffee</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
+                        <h3>>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
+                            <a href="https://www.google.com/maps/place/Liberica+Coffee+Shop/@37.9381008,40.15538,17z/data=!3m1!4b1!4m6!3m5!1s0x40751ff882674627:0x4676f0e1891a709a!8m2!3d37.9381008!4d40.15538!16s%2Fg%2F11lgsgxw_w?entry=ttu&g_ep=EgoyMDI0MDkwMi4xIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Liberica Location📍
                             </a>
                         </span>
-                        <span class="discount">Discount 1</span>
+                        <span class="discount">%20</span>
                     </div>
                 </div>
             </div>
