--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     </header>
 
     <div class="company-list">
-        <!-- Company 1 -->
+        <!-- Liberica Coffee -->
         <div class="company-box">
-            <img src="liberica.jpg" alt="Liberica" class="company-image">
+            <img src="logos/liberica.jpg" alt="Liberica" class="company-image">
             <div class="company-info">
                 <h2>Liberica Coffee</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>>
+                        <h3></h3>
                         <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/place/Liberica+Coffee+Shop/@37.9381008,40.15538,17z/data=!3m1!4b1!4m6!3m5!1s0x40751ff882674627:0x4676f0e1891a709a!8m2!3d37.9381008!4d40.15538!16s%2Fg%2F11lgsgxw_w?entry=ttu&g_ep=EgoyMDI0MDkwMi4xIKXMDSoASAFQAw%3D%3D" target="_blank">
-                                Liberica Location📍
+                                Liberica Location 📍
                             </a>
                         </span>
                         <span class="discount">%20</span>
@@ -34,44 +34,44 @@
                 </div>
             </div>
         </div>
-        <!-- Company 2 -->
+        <!-- St. Morris Coffee & Kitchen -->
         <div class="company-box">
-            <img src="company2.jpg" alt="Company 2" class="company-image">
+            <img src="logos/morris.jpg" alt="Company 2" class="company-image">
             <div class="company-info">
-                <h2>Company 2</h2>
+                <h2>St. Morris Coffee & Kitchen</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 2</h3>
-                        <p>Details about Company 2.</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+2" target="_blank">
-                                Location 2 📍
+                            <a href="https://www.google.com/maps/place/St.+Morris+Coffee+%26+kitchen/@37.9157939,40.2717183,17z/data=!3m1!4b1!4m6!3m5!1s0x407521cae2183249:0x2f5e8e107413c0e5!8m2!3d37.9157939!4d40.2742932!16s%2Fg%2F11s8_r40b7?entry=ttu&g_ep=EgoyMDI0MDkwMi4xIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                St. Morris Coffee & Kitchen Location 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 2</span>
+                        <span class="discount">%20</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 3 -->
+        <!-- Künefeci Salih Usta -->
         <div class="company-box">
-            <img src="company3.jpg" alt="Company 3" class="company-image">
+            <img src="salihusta.jpg" alt="Company 3" class="company-image">
             <div class="company-info">
-                <h2>Company 3</h2>
+                <h2>Künefeci Salih Usta</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 3</h3>
-                        <p>Details about Company 3.</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+3" target="_blank">
-                                Location 3 📍
+                            <a href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x40751f9491ae7699:0x7ea4e3bbddfeb0d2?sa=X&ved=1t:8290&ictx=111" target="_blank">
+                                Künefeci Salih Usta 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 3</span>
+                        <span class="discount">%10</span>
                     </div>
                 </div>
             </div>
