--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <!-- Künefeci Salih Usta -->
         <div class="company-box">
-            <img src="salihusta.jpg" alt="Company 3" class="company-image">
+            <img src="logos/salihusta.jpg" alt="Company 3" class="company-image">
             <div class="company-info">
                 <h2>Künefeci Salih Usta</h2>
                 <div class="info-section">
